Refactored test cases by using `final` for constants and optimizing imports, enhanced clarity by replacing `Arrays` with `List` for better readability, and simplified methods with modern Java constructs like pattern matching and lightweight logging.